fixing bustage. AppendRelativeNativePath only can be used when appending "native paths". r=saspitzer, b=197520